# flet-package-guide

./: README.md  confetti.md  debug_theme_issue.py  final_test_fixed.py  mkdocs.yml  pyproject.toml  readme.md  test_neon_theme.py  test_new_color_system.py  test_simple_debug.py  test_simple_neon.py
docs/: FletConfetti.md  index.md
examples/flet_confetti_example/: pyproject.toml
examples/flet_confetti_example/src/: main.py
package-guide/: README.md  mkdocs.yml  pyproject.toml
package-guide/docs/: FletPackageGuide.md  index.md
package-guide/examples/flet_package_guide_example/: pyproject.toml
package-guide/examples/flet_package_guide_example/src/: main.py
package-guide/src/flet_package_guide/: flet_package_guide.py  url_launcher_control.py
package-guide/src/flet_package_guide.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package-guide/src/flutter/flet_package_guide/: README.md  pubspec.yaml
package-guide/src/flutter/flet_package_guide/lib/: flet_package_guide.dart
package-guide/src/flutter/flet_package_guide/lib/src/: create_control.dart  flet_package_guide.dart  url_launcher_control.dart
src/flet_confetti/: __init__.py  flet_confetti.py
src/flet_confetti.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flutter/flet_confetti/: README.md
src/flutter/flet_confetti/lib/src/: create_control.dart  flet_confetti.dart
